--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
   "description": "Simple orm for expo",
   "main": "index.js",
   "author": "Daniel Fernando Lourusso",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/jest": "^23.3.2",
+    "babel-eslint": "^9.0.0",
+    "eslint": "^5.6.0",
+    "eslint-plugin-jest": "^21.22.0"
+  }
 }
