--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "expo-sqlite-orm",
   "version": "0.0.1",
   "description": "Simple orm for expo",
-  "main": "index.js",
+  "main": "src/index.js",
   "author": "Daniel Fernando Lourusso",
   "license": "MIT",
   "scripts": {
