--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "expo-sqlite-orm",
-  "version": "1.6.0",
+  "version": "1.6.2",
   "description": "Simple orm for expo",
   "main": "src/index.js",
   "author": "Daniel Fernando Lourusso <dflourusso@gmail.com>",
   "license": "MIT",
-  "repository": "https://github.com/dflourusso/expo-sqlite-orm",
+  "repository": "https://github.com/riderodd/expo-sqlite-orm",
   "keywords": [
     "expo",
     "sqlite",
@@ -26,5 +26,8 @@
     "eslint": "^5.6.0",
     "eslint-plugin-jest": "^21.22.0",
     "jest": "^23.6.0"
+  },
+  "dependencies": {
+    "cancelable-promise": "^2.5.0"
   }
 }
