--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "expo-sqlite-orm",
   "version": "1.6.0",
   "description": "Simple orm for expo",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "author": "Daniel Fernando Lourusso <dflourusso@gmail.com>",
   "license": "MIT",
   "repository": "https://github.com/dflourusso/expo-sqlite-orm",
@@ -17,15 +17,21 @@
     "build": "tsc"
   },
   "files": [
-    "src/"
+    "lib/"
   ],
   "devDependencies": {
     "@types/jest": "^26.0.24",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
     "babel-eslint": "^9.0.0",
     "eslint": "^5.6.0",
     "eslint-plugin-jest": "^21.22.0",
     "jest": "^27.0.6",
     "ts-jest": "^27.0.3",
+    "expo-sqlite": "^10.3.0",
     "typescript": "^4.3.5"
+  },
+  "peerDependencies": {
+    "expo-sqlite": "^10.3.0"
   }
 }
