--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expo-sqlite-orm",
-  "version": "1.6.0",
+  "version": "v2.0.0-alpha-1",
   "description": "Simple orm for expo",
   "main": "lib/index.js",
   "author": "Daniel Fernando Lourusso <dflourusso@gmail.com>",
